--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
-.prueba{
-    background-color: aqua;
+footer{
+    padding: 0%;
+    margin: 0%;
+    text-align: center;
+    color: white;
+    background-color: rgb(50, 50, 50);
 }
