--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 *{
+    font-family: "BhuTuka Expanded One", cursive;
     margin: 0%;
     padding: 0%;
 }
@@ -9,7 +10,6 @@ header {
 }
 
 body{
-    font-family: 'Roboto', sans-serif;
     
 }
 
